--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-
-    <div class="workListBoard">
-        <h3>张家梁爱武悦</h3>
-    </div>
+       <p style="text-align:center"><font size="2"><h3>张家梁爱武悦</h3></font></p>
